Fixed listen now page layout breaking on mobile

--- a/sass/_partials/_listen-now.scss
+++ b/sass/_partials/_listen-now.scss
@@ -131,6 +131,10 @@
                 height: 100%;
                 width: 150%;
                 z-index: 2;
+
+                @include breakpoint(mobile) {
+                    width: 100%;
+                }
             }
         }
 
